fix font still not showing

--- a/src/frontend/src/App.scss
+++ b/src/frontend/src/App.scss
@@ -1,5 +1,6 @@
 .App {
   padding: 1.5em 16em; 
+  font-family: 'Lato', sans-serif;
 
   .info-wrapper {
     display: flex;
